--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon server.js",
     "test": "cross-env NODE_ENV=test jest --watch --verbose"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Lambda-School-Labs/CS9-KnowledgeRocket.git"
@@ -18,10 +21,12 @@
   },
   "homepage": "https://github.com/Lambda-School-Labs/CS9-KnowledgeRocket#readme",
   "dependencies": {
+    "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "jest": "^23.5.0",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "supertest": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
