server is running need a mongodb database to link to in order to remove some errors

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "message-rocket-lab-project",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "cross-env NODE_ENV=test jest --watch --verbose"
   },
   "jest": {
