--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
     "jest": "^23.5.0",
     "material-ui": "^0.20.2",
     "react": "^16.4.2",
