--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cs9-knowledgerocket",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "test:client": "cd client && npm test && cd ..",
     "test:server": "cd server && npm test && cd ..",
