--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:client": "cd client && npm test && cd ..",
     "test:server": "cd server && npm test && cd ..",
     "install": "cd client && npm i && cd .. && cd server && npm i && cd ..",
+    "postinstall": "npm run build",
     "build:client": "cd client && npm run build && cd ..",
     "build": "npm run build:client",
     "start": "cd server && npm start"
