ensure ci runs all tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test:client": "cd client && npm test && cd ..",
     "test:server": "cd server && npm test && cd ..",
+    "test": "npm run test:client && npm run test:server",
     "install": "cd client && npm i && cd .. && cd server && npm i && cd ..",
     "build:client": "cd client && npm run build && cd ..",
     "build": "npm run build:client",
