run server test without watching for file changes

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "test:once": "cross-env NODE_ENV=test jest --verbose",
     "test": "cross-env NODE_ENV=test jest --watch --verbose"
   },
   "jest": {
