--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "test:client": "cd client && npm test && cd ..",
-    "test:server": "cd server && npm test && cd ..",
+    "test:server": "cd server && npm run test:once && cd ..",
     "test": "npm run test:client && npm run test:server",
     "install": "cd client && npm i && cd .. && cd server && npm i && cd ..",
     "build:client": "cd client && npm run build && cd ..",
