--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "firebase": "^5.3.1",
     "helmet": "^3.13.0",
     "jest": "^23.5.0",
     "mongoose": "^5.2.7",
