--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-test-renderer": "^16.4.2",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
