--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-test-renderer": "^16.4.2",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
