--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "messagerocket",
   "version": "1.0.0",
   "description": "message-rocket-lab-project",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "test:once": "cross-env NODE_ENV=test jest --verbose",
     "test": "cross-env NODE_ENV=test jest --watch --verbose"
   },
@@ -28,6 +28,8 @@
     "firebase": "^5.3.1",
     "helmet": "^3.13.0",
     "jest": "^23.5.0",
+    "mongodb": "^3.1.3",
+    "mongodb-memory-server": "^1.9.3",
     "mongoose": "^5.2.7",
     "supertest": "^3.1.0"
   },
