--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:server": "cd server && npm run test:once && cd ..",
     "test": "npm run test:client && npm run test:server",
     "install": "cd client && npm i && cd .. && cd server && npm i && cd ..",
+    "postinstall": "npm run build",
     "build:client": "cd client && npm run build && cd ..",
     "build": "npm run build:client",
     "start": "cd server && npm start"
