--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Lambda-School-Labs/CS9-KnowledgeRocket#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
@@ -29,6 +30,7 @@
     "helmet": "^3.13.0",
     "jest": "^23.5.0",
     "mongoose": "^5.2.7",
+    "stripe": "^6.7.0",
     "supertest": "^3.1.0"
   },
   "devDependencies": {
