--- a/server/package.json
+++ b/server/package.json
@@ -31,9 +31,11 @@
         "jest": "^23.5.0",
         "mongoose": "^5.2.7",
         "stripe": "^6.7.0",
-        "supertest": "^3.1.0"
+        "supertest": "^3.1.0",
+        "yup": "^0.26.2"
     },
     "devDependencies": {
+        "@types/yup": "^0.24.9",
         "nodemon": "^1.18.3"
     }
 }
