--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "firebase": "^5.3.1",
         "formik": "^1.0.3",
         "material-ui": "^0.20.2",
+        "moment": "^2.22.2",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-redux": "^5.0.7",
