--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "@sendgrid/mail": "^6.3.1",
         "cors": "^2.8.4",
         "cross-env": "^5.2.0",
+        "date-fns": "^1.29.0",
         "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "firebase": "^5.3.1",
