--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
         "jest": "^23.5.0",
         "mongoose": "^5.2.7",
         "mongoose-autopopulate": "^0.8.0",
+        "papaparse": "^4.6.0",
         "stripe": "^6.7.0",
         "supertest": "^3.1.0",
         "yup": "^0.26.2"
