Removed Warnings from console: Implemented logger on development only

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
+        "@types/firebase": "^3.2.1",
         "@types/yup": "^0.24.9",
         "jest-styled-components": "^6.1.1"
     }
