remove papaparse as a dependency

--- a/package.json
+++ b/package.json
@@ -22,8 +22,5 @@
     "bugs": {
         "url": "https://github.com/Lambda-School-Labs/CS9-KnowledgeRocket/issues"
     },
-    "homepage": "https://github.com/Lambda-School-Labs/CS9-KnowledgeRocket#readme",
-    "dependencies": {
-        "papaparse": "^4.6.0"
-    }
+    "homepage": "https://github.com/Lambda-School-Labs/CS9-KnowledgeRocket#readme"
 }
