update client deps and lock versions

--- a/client/package.json
+++ b/client/package.json
@@ -3,30 +3,30 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^1.5.0",
-        "@material-ui/icons": "^2.0.2",
-        "axios": "^0.18.0",
-        "dotenv": "^6.0.0",
-        "enzyme": "^3.4.1",
-        "enzyme-adapter-react-16": "^1.2.0",
-        "firebase": "^5.3.1",
-        "formik": "^1.0.3",
-        "material-ui": "^0.20.2",
-        "moment": "^2.22.2",
-        "papaparse": "^4.6.0",
-        "moment-timezone": "^0.5.21",
-        "react": "^16.4.2",
-        "react-dom": "^16.4.2",
-        "react-redux": "^5.0.7",
-        "react-router-dom": "^4.3.1",
+        "@material-ui/core": "1.5.1",
+        "@material-ui/icons": "2.0.3",
+        "axios": "0.18.0",
+        "dotenv": "6.0.0",
+        "enzyme": "3.6.0",
+        "enzyme-adapter-react-16": "1.5.0",
+        "firebase": "5.4.2",
+        "formik": "1.2.0",
+        "material-ui": "0.20.2",
+        "moment": "2.22.2",
+        "moment-timezone": "0.5.21",
+        "papaparse": "4.6.0",
+        "react": "16.5.0",
+        "react-dom": "16.5.0",
+        "react-redux": "5.0.7",
+        "react-router-dom": "4.3.1",
         "react-scripts": "1.1.4",
-        "react-stripe-elements": "^2.0.1",
-        "react-test-renderer": "^16.4.2",
-        "redux": "^4.0.0",
-        "redux-logger": "^3.0.6",
-        "redux-thunk": "^2.3.0",
-        "styled-components": "^3.4.2",
-        "yup": "^0.26.2"
+        "react-stripe-elements": "2.0.1",
+        "react-test-renderer": "16.5.0",
+        "redux": "4.0.0",
+        "redux-logger": "3.0.6",
+        "redux-thunk": "2.3.0",
+        "styled-components": "3.4.5",
+        "yup": "0.26.3"
     },
     "scripts": {
         "start": "react-scripts start",
